Fix list alignments

--- a/src/ui/src/app/deployments/deployments.component.scss
+++ b/src/ui/src/app/deployments/deployments.component.scss
@@ -61,7 +61,6 @@
         flex: 1;
         display: flex;
         flex-flow: row wrap;
-        justify-content: space-between;
         padding-right: 10px;
         &__empty {
           align-self: center;
@@ -71,14 +70,15 @@
         app-deployment-item {
           height: 150px;
           margin-bottom: 1em;
+          margin-right: 1em;
           @include mappy-bp(small) {
             width: 100%;
           }
           @include mappy-bp(medium) {
-            width: 48%;
+            width: 46%;
           }
           @include mappy-bp(large) {
-            width: 32%;
+            width: 31%;
           }
         }
       }
